# llama

./: .gitignore  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/jni/: README.md  jni_llama.cpp
app/src/main/java/com/example/ollama/: ConfigurationManager.java  LlamaNative.java  MainActivity.java  ModelManager.java  OllamaApiServer.java  OllamaForegroundService.java  SettingsActivity.java
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
